--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
   "homepage": "https://github.com/star-this/type-horde#readme",
   "devDependencies": {
     "vitest": "^2.1.8"
+  },
+  "dependencies": {
+    "typescript": "^5.7.2"
   }
 }
