--- a/package.json
+++ b/package.json
@@ -61,12 +61,10 @@
   },
   "homepage": "https://github.com/star-this/type-horde#readme",
   "devDependencies": {
+    "@total-typescript/ts-reset": "^0.6.1",
     "@types/node": "^22.10.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
-  },
-  "dependencies": {
-    
   }
 }
